--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,8 +3,8 @@ authors: [ Bram ]
 description: Spoofs certain information sent by the server to other players to prevent them from deducing information about the player's health, armor, held item, etc.
 website: https://github.com/Bram1903/AntiHealthIndicator
 main: com.deathmotion.antihealthindicator.AntiHealthIndicator
-version: 1.0.0
-api-version: 1.13
+version: '${project.version}'
+api-version: '1.13'
 folia-supported: true
 load: POSTWORLD
 permissions:
