--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -61,7 +61,7 @@ spoof:
 
         # Only set one of the following options to true, otherwise only tamed wolves will be ignored.
         # If both are false, all wolves will be ignored, which means the client will render the correct tail positions
-        # of all wolves including wild wolves.
+        # of all wolves, including wild wolves.
         when:
           # If enabled, only the health of tamed wolves will be ignored.
           # This means players will see the correct tail positions of tamed wolves, but not of wild wolves.
@@ -70,6 +70,20 @@ spoof:
           # If enabled, only the health of owned wolves will be ignored.
           # This means only the player who owns the wolf sees the correct tail positions of his wolf
           for-owned-wolves: true
+
+      # Ignoring iron golem health while spoofing allows for proper visual rendering.
+      # From version 1.15, iron golem textures are based on its health.
+      # (Refer: https://minecraft.fandom.com/wiki/Iron_Golem#Cracking)
+      ignore-iron-golems:
+        enabled: true
+
+        # Gradual health spoofing provides a seamless transition between different iron golem health textures.
+        # It will always show the highest possible health for the current texture based on the health of the iron golem.
+        # This will make it impossible for other players to determine the exact health of the iron golem
+        # until it reaches the next health texture, which is vanilla behavior.
+        gradual:
+          enabled: true
+
 
     # If enabled, hides the absorption of other players.
     absorption:
