--- a/build.gradle
+++ b/build.gradle
@@ -6,23 +6,19 @@ plugins {
 group 'com.deathmotion.antihealthindicator'
 version '1.1.0'
 
-compileJava {
-    options.release.set(8)
-}
-
 java {
-    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
-    disableAutoTargetJvm()
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.papermc.io/repository/maven-public/' }
+    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url 'https://repo.codemc.io/repository/maven-releases/' }
 }
 
 dependencies {
-    compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     implementation 'com.github.retrooper.packetevents:spigot:2.2.0'
