Switched back to a deprecated API method in GSON, to support older versions.

--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,9 @@ shadowJar {
     minimize()
     archiveFileName.set("${project.name}-${project.version}.jar")
 
-    relocate 'com.github.retrooper.packetevents', 'com.deathmotion.antihealthindicator.packetevents.api'
-    relocate 'io.github.retrooper.packetevents', 'com.deathmotion.antihealthindicator.packetevents.impl'
-    relocate 'net.kyori', 'com.deathmotion.antihealthindicator.packetevents.kyori'
+    relocate("io.github.retrooper.packetevents", "com.deathmotion.antihealthindicator.shaded.io.github.retrooper.packetevents")
+    relocate("com.github.retrooper.packetevents", "com.deathmotion.antihealthindicator.shaded.com.github.retrooper.packetevents")
+    relocate("net.kyori", "com.deathmotion.antihealthindicator.shaded.kyori")
+    relocate("com.google.gson", "com.deathmotion.antihealthindicator.shaded.gson")
     relocate 'org.bstats', 'com.deathmotion.antihealthindicator'
 }
