--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.deathmotion.antihealthindicator'
-version '1.1.3-SNAPSHOT'
+version '1.1.3'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
