--- a/platforms/bukkit/src/main/resources/plugin.yml
+++ b/platforms/bukkit/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: AntiHealthIndicator
 author: Bram
 description: Spoofs certain information sent by the server to other players to prevent them from deducing information about the player's health, armor, held item, etc.
 website: https://github.com/Bram1903/AntiHealthIndicator
-main: com.deathmotion.antihealthindicator.AHIPlugin
+main: com.deathmotion.antihealthindicator.AHIBukkit
 version: '2.1.0'
 api-version: '1.13'
 folia-supported: true
