Updated: .gitignore to account for the new server location

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### runPaper Task
-platforms/bukkit/server/
-platforms/velocity/server/
+/server/
 
 ### IntelliJ IDEA ###
 .idea/
