--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -3,6 +3,7 @@ adventure = "4.16.0"
 packetevents = "2.3.0"
 spigot = "1.20.6-R0.1-SNAPSHOT"
 velocity = "3.3.0-SNAPSHOT"
+bungeecord = "1.20-R0.1-SNAPSHOT"
 run-paper = "2.3.0"
 caffeine = "2.5.6"
 lombok = "1.18.30"
@@ -17,10 +18,12 @@ adventure-nbt = { group = "net.kyori", name = "adventure-nbt", version.ref = "ad
 packetevents-api = { group = "com.github.retrooper.packetevents", name = "api", version.ref = "packetevents" }
 packetevents-spigot = { group = "com.github.retrooper.packetevents", name = "spigot", version.ref = "packetevents" }
 packetevents-velocity = { group = "com.github.retrooper.packetevents", name = "velocity", version.ref = "packetevents" }
+packetevents-bungeecord = { group = "com.github.retrooper.packetevents", name = "bungeecord", version.ref = "packetevents" }
 caffeine = { group = "com.github.ben-manes.caffeine", name = "caffeine", version.ref = "caffeine" }
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
 spigot = { group = "org.spigotmc", name = "spigot-api", version.ref = "spigot" }
 velocity = { group = "com.velocitypowered", name = "velocity-api", version.ref = "velocity" }
+bungeecord = { group = "net.md-5", name = "bungeecord-api", version.ref = "bungeecord" }
 
 [bundles]
 adventure = [ "adventure-api", "adventure-text-serializer-gson", "adventure-text-serializer-legacy", "adventure-nbt" ]
