Improved: Version Handling

--- a/platforms/bukkit/src/main/resources/plugin.yml
+++ b/platforms/bukkit/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: AntiHealthIndicator
 author: Bram
-description: Spoofs certain information sent by the server to other players to prevent them from deducing information about the player's health, armor, held item, etc.
+description: A plugin that prevents hackers and modders from seeing the health of other players.
 website: https://github.com/Bram1903/AntiHealthIndicator
 main: com.deathmotion.antihealthindicator.AHIBukkit
-version: '2.1.0'
+version: ${version}
 api-version: '1.13'
 folia-supported: true
 load: POSTWORLD
