--- a/platforms/bungeecord/src/main/resources/bungee.yml
+++ b/platforms/bungeecord/src/main/resources/bungee.yml
@@ -1,9 +1,9 @@
 name: AntiHealthIndicator
 author: Bram
-description: Spoofs certain information sent by the server to other players to prevent them from deducing information about the player's health, armor, held item, etc.
+description: A plugin that prevents hackers and modders from seeing the health of other players.
 website: https://github.com/Bram1903/AntiHealthIndicator
 main: com.deathmotion.antihealthindicator.AHIBungee
-version: '2.1.0'
+version: ${version}
 permissions:
   AntiHealthIndicator.Notify:
     description: "This permission allows players to be notified when an update is found."
