--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### runPaper Task
-/server/
-
 ### IntelliJ IDEA ###
 .idea/
 *.iws
@@ -40,3 +37,6 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+# Common working directory
+run/
