--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -4,6 +4,7 @@ packetevents = "2.3.1-SNAPSHOT"
 paper = "1.20.6-R0.1-SNAPSHOT"
 velocity = "3.3.0-SNAPSHOT"
 bungeecord = "1.20-R0.1-SNAPSHOT"
+snakeyaml = "2.2"
 run-paper = "2.3.0"
 lombok = "1.18.30"
 shadow = "8.1.1"
@@ -18,6 +19,7 @@ packetevents-api = { group = "com.github.retrooper.packetevents", name = "api", 
 packetevents-spigot = { group = "com.github.retrooper.packetevents", name = "spigot", version.ref = "packetevents" }
 packetevents-velocity = { group = "com.github.retrooper.packetevents", name = "velocity", version.ref = "packetevents" }
 packetevents-bungeecord = { group = "com.github.retrooper.packetevents", name = "bungeecord", version.ref = "packetevents" }
+snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
 paper = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper" }
 velocity = { group = "com.velocitypowered", name = "velocity-api", version.ref = "velocity" }
