Googler's Fork -> GradleUp

--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -7,7 +7,7 @@ bungeecord = "1.21-R0.1-SNAPSHOT"
 snakeyaml = "2.2"
 run-paper = "2.3.0"
 lombok = "1.18.30"
-shadow = "8.1.8"
+shadow = "8.3.0"
 
 [libraries]
 adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
@@ -31,4 +31,4 @@ adventure = ["adventure-api", "adventure-text-serializer-gson", "adventure-text-
 [plugins]
 run-paper = { id = "xyz.jpenilla.run-paper", version.ref = "run-paper" }
 run-velocity = { id = "xyz.jpenilla.run-velocity", version.ref = "run-paper" }
-shadow = { id = "io.github.goooler.shadow", version.ref = "shadow" }
+shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
