Added: BetterReload Support

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ snakeyaml = "2.2"
 run-paper = "2.3.0"
 lombok = "1.18.30"
 shadow = "8.3.0"
+betterreload = "v1.0.0"
 
 [libraries]
 adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
@@ -21,6 +22,7 @@ packetevents-velocity = { group = "com.github.retrooper", name = "packetevents-v
 packetevents-bungeecord = { group = "com.github.retrooper", name = "packetevents-bungeecord", version.ref = "packetevents" }
 snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
+betterreload-api = { group = "com.github.amnoah.betterreload", name = "api", version.ref = "betterreload" }
 paper = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper" }
 velocity = { group = "com.velocitypowered", name = "velocity-api", version.ref = "velocity" }
 bungeecord = { group = "net.md-5", name = "bungeecord-api", version.ref = "bungeecord" }
