Added: AntiHealthIndicator.Reload permission

--- a/platforms/bukkit/src/main/resources/plugin.yml
+++ b/platforms/bukkit/src/main/resources/plugin.yml
@@ -19,6 +19,9 @@ permissions:
   AntiHealthIndicator.Bypass:
     description: "This permission prevents the player from receiving spoofed data."
     default: op
+  AntiHealthIndicator.Reload:
+    description: "This permission allows players to reload the configuration."
+    default: op
   AntiHealthIndicator.Debug:
     description: "This permission allows players to see debug messages."
     default: op
