--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,16 @@
 [versions]
 adventure = "4.16.0"
 packetevents = "2.5.1-SNAPSHOT"
+betterreload = "v1.0.0"
 paper = "1.21-R0.1-SNAPSHOT"
 velocity = "3.3.0-SNAPSHOT"
 bungeecord = "1.21-R0.1-SNAPSHOT"
+sponge = "8.0.0"
 snakeyaml = "2.2"
 run-paper = "2.3.0"
 lombok = "1.18.30"
 shadow = "8.3.0"
-betterreload = "v1.0.0"
+spongeGradle = "2.2.0"
 
 [libraries]
 adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
@@ -20,12 +22,14 @@ packetevents-api = { group = "com.github.retrooper", name = "packetevents-api", 
 packetevents-spigot = { group = "com.github.retrooper", name = "packetevents-spigot", version.ref = "packetevents" }
 packetevents-velocity = { group = "com.github.retrooper", name = "packetevents-velocity", version.ref = "packetevents" }
 packetevents-bungeecord = { group = "com.github.retrooper", name = "packetevents-bungeecord", version.ref = "packetevents" }
+packetevents-sponge = { group = "com.github.retrooper", name = "packetevents-sponge", version.ref = "packetevents" }
 snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
 betterreload-api = { group = "com.github.amnoah.betterreload", name = "api", version.ref = "betterreload" }
 paper = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper" }
 velocity = { group = "com.velocitypowered", name = "velocity-api", version.ref = "velocity" }
 bungeecord = { group = "net.md-5", name = "bungeecord-api", version.ref = "bungeecord" }
+sponge = { group = "org.spongepowered", name = "spongeapi", version.ref = "sponge" }
 
 [bundles]
 adventure = ["adventure-api", "adventure-text-serializer-gson", "adventure-text-serializer-legacy", "adventure-nbt"]
@@ -34,3 +38,4 @@ adventure = ["adventure-api", "adventure-text-serializer-gson", "adventure-text-
 run-paper = { id = "xyz.jpenilla.run-paper", version.ref = "run-paper" }
 run-velocity = { id = "xyz.jpenilla.run-velocity", version.ref = "run-paper" }
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
+spongeGradle = { id = "org.spongepowered.gradle.plugin", version.ref = "spongeGradle" }
