--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 adventure = "4.16.0"
-packetevents = "2.6.0-SNAPSHOT"
+packetevents = "2.6.0"
 betterreload = "v1.0.0"
 paper = "1.21-R0.1-SNAPSHOT"
 velocity = "3.3.0-SNAPSHOT"
