Improved: API handling

--- a/tests/api-bukkit-test-plugin/src/main/resources/paper-plugin.yml
+++ b/tests/api-bukkit-test-plugin/src/main/resources/paper-plugin.yml
@@ -6,5 +6,5 @@ dependencies:
   server:
     AntiHealthIndicator:
       load: BEFORE
-      required: true
+      required: false
       join-classpath: true
