Rewrote major part of the common logic

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 adventure = "4.18.0"
 packetevents = "2.7.0"
 betterreload = "v1.0.0"
+guava = "33.3.1-jre"
 paper = "1.21.4-R0.1-SNAPSHOT"
 velocity = "3.4.0-SNAPSHOT"
 bungeecord = "1.21-R0.1-SNAPSHOT"
@@ -26,6 +27,7 @@ packetevents-sponge = { group = "com.github.retrooper", name = "packetevents-spo
 snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
 betterreload-api = { group = "com.github.amnoah.betterreload", name = "api", version.ref = "betterreload" }
+guava = { group = "com.google.guava", name = "guava", version.ref = "guava" }
 paper = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper" }
 velocity = { group = "com.velocitypowered", name = "velocity-api", version.ref = "velocity" }
 bungeecord = { group = "net.md-5", name = "bungeecord-api", version.ref = "bungeecord" }
