--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 adventure = "4.18.0"
-packetevents = "2.7.0"
+packetevents = "2.8.0-SNAPSHOT"
 betterreload = "v1.0.0"
 guava = "33.3.1-jre"
 paper = "1.21.4-R0.1-SNAPSHOT"
