--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,22 @@
 [versions]
-adventure = "4.18.0"
+adventure = "4.21.0"
 packetevents = "2.8.0-SNAPSHOT"
 betterreload = "v1.0.0"
 guava = "33.3.1-jre"
-paper = "1.21.4-R0.1-SNAPSHOT"
+paper = "1.21.5-R0.1-SNAPSHOT"
 velocity = "3.4.0-SNAPSHOT"
-bungeecord = "1.21-R0.1-SNAPSHOT"
-sponge = "8.0.0"
+bungeecord = "1.21-R0.2-SNAPSHOT"
+sponge = "13.0.0"
 snakeyaml = "2.2"
 run-paper = "2.3.1"
-lombok = "1.18.36"
-shadow = "8.3.5"
-spongeGradle = "2.2.0"
+lombok = "1.18.38"
+shadow = "8.3.6"
+spongeGradle = "2.3.0"
 
 [libraries]
 adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
 adventure-text-serializer-gson = { group = "net.kyori", name = "adventure-text-serializer-gson", version.ref = "adventure" }
 adventure-text-serializer-legacy = { group = "net.kyori", name = "adventure-text-serializer-legacy", version.ref = "adventure" }
-adventure-text-serializer-gson-legacy = { group = "net.kyori", name = "adventure-text-serializer-gson-legacy-impl", version.ref = "adventure" }
-adventure-nbt = { group = "net.kyori", name = "adventure-nbt", version.ref = "adventure" }
 packetevents-api = { group = "com.github.retrooper", name = "packetevents-api", version.ref = "packetevents" }
 packetevents-spigot = { group = "com.github.retrooper", name = "packetevents-spigot", version.ref = "packetevents" }
 packetevents-velocity = { group = "com.github.retrooper", name = "packetevents-velocity", version.ref = "packetevents" }
@@ -34,7 +32,8 @@ bungeecord = { group = "net.md-5", name = "bungeecord-api", version.ref = "bunge
 sponge = { group = "org.spongepowered", name = "spongeapi", version.ref = "sponge" }
 
 [bundles]
-adventure = ["adventure-api", "adventure-text-serializer-gson", "adventure-text-serializer-legacy", "adventure-nbt"]
+adventure = [ "adventure-api" ]
+adventure-serializers = [ "adventure-text-serializer-gson", "adventure-text-serializer-legacy" ]
 
 [plugins]
 run-paper = { id = "xyz.jpenilla.run-paper", version.ref = "run-paper" }
