--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 adventure = "4.23.0"
-packetevents = "2.9.0-SNAPSHOT"
+packetevents = "2.9.1"
 betterreload = "v1.0.0"
 guava = "33.3.1-jre"
 paper = "1.21.7-R0.1-SNAPSHOT"
