--- a/common/src/main/resources/config.yml
+++ b/common/src/main/resources/config.yml
@@ -40,6 +40,10 @@ spoof:
   team-scoreboard:
     enabled: true
 
+  # Prevents a player from receiving max health and max absorption attributes from other players.
+  attributes:
+    enabled: true
+
   # These options determine what entity data should be spoofed.
   entity-data:
     # If disabled, none of the following settings will have any effect.
