--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 adventure = "4.25.0"
-packetevents = "2.10.0-SNAPSHOT"
+packetevents = "2.10.1"
 betterreload = "v1.0.0"
 guava = "33.3.1-jre"
-paper = "1.21.7-R0.1-SNAPSHOT"
+paper = "1.21.10-R0.1-SNAPSHOT"
 velocity = "3.4.0-SNAPSHOT"
 bungeecord = "1.21-R0.2-SNAPSHOT"
 sponge = "13.0.0"
 snakeyaml = "2.2"
 run-paper = "3.0.2"
-lombok = "1.18.38"
+lombok = "1.18.42"
 shadow = "9.2.2"
 spongeGradle = "2.3.0"
 
